<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="tic_tac_toe" translatable="false">TIC TAC TOE</string>
    <string name="single_player">Play</string>
    <string name="multi_player">Play online</string>
    <string name="settings">Settings</string>
    <string name="about_game">About Game</string>
    <string name="restart">Restart</string>
    <string name="single_player_settings">Single Player</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="join_lobby">Join lobby</string>
    <string name="cancel">Cancel</string>
    <string name="enter_lobby_id">Enter lobby id</string>
    <string name="text_copied">Text was copied to the clipboard</string>
    <string name="best_of">Best of:</string>
    <string name="lobby_id">Lobby id:</string>

</resources>